--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,35 +7,7 @@
     android:orientation="vertical"
     android:padding="16dp">
 
-    <EditText
-        android:id="@+id/text_editText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Type your message" />
 
-    <Spinner
-        android:id="@+id/language_spinner"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:entries="@array/languages" />
-
-    <Button
-        android:id="@+id/request_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Send" />
-
-    <TextView
-        android:id="@+id/message"
-        android:layout_width="378dp"
-        android:layout_height="wrap_content"
-        android:paddingTop="16dp"
-        android:text="Response" />
-
-    <Spinner
-        android:id="@+id/spnCategory"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
 
     <Button
         android:id="@+id/btnQuoteMaker"
@@ -48,6 +20,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="TextView" />
+
+    <Spinner
+        android:id="@+id/language_spinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:entries="@array/languages" />
+
+    <Button
+        android:id="@+id/request_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Translate" />
 
     <Button
         android:id="@+id/btnGetImage"
