--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
         android:layout_height="41dp"
         android:layout_marginTop="30dp"
         android:text="Quote / Translator API"
-        android:textSize="24dp"
+        android:textSize="25sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,6 +40,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:textSize="19sp"
         android:text="Find"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -53,7 +54,7 @@
         android:layout_height="41dp"
         android:layout_marginTop="10dp"
         android:text="To change the language"
-        android:textSize="19dp"
+        android:textSize="19sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/language_spinner"
         app:layout_constraintEnd_toEndOf="parent"
@@ -67,6 +68,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Get Image"
+        android:textSize="19sp"
         app:layout_constraintBottom_toTopOf="@+id/imgQuote"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -90,6 +92,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:textSize="19sp"
         android:text="Translate"
         app:layout_constraintBottom_toTopOf="@+id/btnGetImage"
         app:layout_constraintEnd_toEndOf="parent"
