--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -2,8 +2,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:textSize="20sp"
+    android:textSize="18sp"
     android:gravity="left"
-    android:textColor="@color/black"
+    android:textColor="#00FFFF"
+    android:backgroundTint="@color/black"
+    android:background="@color/black"
     android:padding="5dip"
     />
